# boncekeeb

./: .gitignore  README.md  notes.md
archived/: CMakeLists.txt
archived/circuitpython/: code.py
archived/circuitpython/boncekeeb/: keypad_key_state.py
archived/circuitpython/lib/: adafruit_ssd1306.mpy
archived/src/boncekeeb/: CMakeLists.txt  bonce_ssd1306.c  boncekeeb.c  usb_descriptors.c
archived/src/boncekeeb_ws2812/: bonce_ssd1306.h  usb_descriptors.c
src/: CMakeLists.txt
src/boncekeeb/: CMakeLists.txt  boncekeeb.c  usb_descriptors.h
src/boncekeeb_ws2812/: CMakeLists.txt  bonce_ssd1306.c  boncekeeb_ws2812.c
